ajout de l'interaction

--- a/cv.html
+++ b/cv.html
@@ -93,7 +93,10 @@
               <li>Cuisine</li>
             </ul>
           </div>
+          <button id="btnToIndex">Retour Accueil</button>
         </div>
+        
       </div>
+      <script src="script.js"></script>
 </body>
 </html>
