--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="contenu">
     <div class="container">
-      <h1 >DEVELOPPEUSE WEB ET MOBILE EN DEVENIR </h1>
+      <h1 id="animatedText">DEVELOPPEUSE WEB ET MOBILE EN DEVENIR </h1>
             <img src="img/image.png" alt="image descriptive" class="img">  
-           <p class=" mot-accueil "> Passionnée par le tech, je conçois des interfaces modernes et intuitive</p>
-         <button ids="btn">Voir mon cv</button>
+           <p class=" mot-accueil " > Passionnée par le tech, je conçois des interfaces modernes et intuitive</p>
+         <button id="btnToCv">Voir mon cv</button>
         </div>
         <script src="script.js"></script>
 </body>
-</html>
+</html> 
