--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1 id="animatedText">DEVELOPPEUSE WEB ET MOBILE EN DEVENIR </h1>
             <img src="img/image.png" alt="image descriptive" class="img">  
-           <p class=" mot-accueil " > Passionnée par le tech, je conçois des interfaces modernes et intuitive</p>
+           <p  id="animateText" ><h2></h2> Passionnée par le tech, je conçois des interfaces modernes et intuitive</p>
          <button id="btnToCv">Voir mon cv</button>
         </div>
         <script src="script.js"></script>
