--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body class="contenu">
     <div class="container">
-      <h1 id="animatedText">DEVELOPPEUSE WEB ET MOBILE EN DEVENIR </h1>
+      <div id="animatedText">DEVELOPPEUSE WEB ET MOBILE EN DEVENIR </div>
             <img src="img/image.png" alt="image descriptive" class="img">  
-           <p  id="animateText" ><h2></h2> Passionnée par le tech, je conçois des interfaces modernes et intuitive</p>
+           <div id="animateText" > Passionnée par le tech, je conçois des interfaces modernes et intuitive</div>
          <button id="btnToCv">Voir mon cv</button>
         </div>
         <script src="script.js"></script>
