mise a jours pour les animation

--- a/cv.html
+++ b/cv.html
@@ -143,10 +143,11 @@
       </div>
       <div id="btnToIndex">
       <button >Retour Accueil</button></div>
-      <button id="btnTelecharger" class="btn-telecharger">📄 Télécharger mon CV</button>
-
+      <div class="btn-telecharger">
+        <button id="btnTelecharger" >Télécharger mon CV</button>
+      </div>
       <form  >
-      <input id="color" name="color" type="color" value="#30303030">
+      <input id="color" name="color" type="color" value="#303030">
      </form>
       <script src="script.js"></script>
 </body>
